<resources>
    <string name="app_name">Saaty</string>
    <string name="choose_lang">Choose Language</string>
    <string name="arabic_lang">العربيه </string>
    <string name="english_lang">English</string>
    <string name="email_input">Email</string>
    <string name="password_input">Password</string>
    <string name="save_info_login">Save Login Information</string>
    <string name="login_btn">Login</string>
    <string name="login_visitor_btn">Login As Visitor</string>
    <string name="forget_password_txt">Forget Password?</string>
    <string name="create_account_txt">Create New Account</string>
    <string name="forget_pass">Forget Password</string>
    <string name="enter_phone_number">Please Enter Phone Number</string>
    <string name="phone_number_input">Phone Number</string>
    <string name="confirm">Confirm</string>
    <string name="verify_code_txt">Please check your email and get the confirmation code</string>
    <string name="enter_code">Enter Code</string>
    <string name="resend_code_txt">Again Resend Code</string>
    <string name="change_password_txt">Please enter new password</string>
    <string name="accept_terms_txt">Accept Terms and Conditions</string>
    <string name="confirm_new_password_input">Confirm new password</string>
    <string name="register_user">Register As User</string>
    <string name="register_trader">Register As Trader</string>
    <string name="user_name_input">User Name</string>
    <string name="confirm_password_input">Confirm Password</string>
    <string name="trader_name_input">Trader Name</string>
    <string name="store">Stores</string>
    <string name="user_name">User Name</string>
    <string name="home_page">Home Page</string>
    <string name="my_account">My Account</string>
    <string name="wishlist">Wishlist</string>
    <string name="my_ads">My Ads</string>
    <string name="message">Messages</string>
    <string name="sign_out">Sign Out</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="about_app">About App</string>
    <string name="setting">Setting</string>
    <string name="open_drawer">open</string>
    <string name="close_drawer">close</string>
    <string name="add_ads">Add Ads</string>
    <string name="weclome_visitor">Welcome to Saaty as Visitor</string>
    <string name="search">Search</string>
    <string name="no_product">there is no data</string>
    <string name="store_name">Store Name</string>
    <string name="splash_message1">We are pleased with the satisfaction of all our customers and buyers</string>
    <string name="splash_message2">Your product reaches you as soon as possible</string>
    <string name="splash_message3">Choose your product and payment method</string>
    <string name="field_required">This field is required</string>
    <string name="password_equal_error">Password not match</string>
    <string name="error_email_msg">plese enter valid email</string>
    <string name="weak_password">weak password</string>
    <string name="error_connection">Make sure internet is connected</string>
    <string name="logging">loading ...</string>
    <string name="reset_password">Reset Password Confirmation</string>
    <string name="check_box">please accept terms</string>
    <string name="stores_toolbar">Stores</string>
    <string name="empty_data">not Data found</string>
    <string name="product_price">10</string>
    <string name="time">sice 20 mins</string>
    <string name="product_name">Watch</string>
    <string name="product_desc">udfv dkhcgvfh djifgv dihvgvu diduf   fuhcgcu dsihgc  odpsoijciuviudj cvudfhyvujhcui djvhdyvchuid</string>
    <string name="watch_imges">Watch Images</string>
    <string name="producer_name">Producer Name:</string>
    <string name="producer_phone">01134551079</string>
    <string name="message_title">Message Title</string>
    <string name="send">Send</string>
    <string name="save">Save</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="change_password">Change Password</string>
    <string name="language">Language</string>
    <string name="sort_by">Sort By:</string>
    <string name="from_high_to_low">From high price to low</string>
    <string name="from_low_to_high">From low price to high</string>
    <string name="filter_by">Filter By:</string>
    <string name="old_products">Old Products</string>
    <string name="new_products">New Products</string>
    <string name="remove_wishlist_item">Are you sure to delete this item?</string>
    <string name="remove_wishlist_title">Delete WIshlist Item</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="select_language">Select Language:</string>
    <string name="address_txt">Address:</string>
    <string name="address_value">Streat,Area,Country</string>
    <string name="website">Website:</string>
    <string name="website_value">www.company.com</string>
    <string name="email_value">company@gmail.com</string>
    <string name="sort_by_type">Sort By Type:</string>
    <string name="filter_by_status">Filter By Status:</string>
    <string name="watch">Watch</string>
    <string name="bracletes">Bracletes</string>
    <string name="delete_ads">Delete Ads</string>
    <string name="delete_ads_msg">Are you sure delete this ads?</string>
    <string name="type">Type:</string>
    <string name="status">Status:</string>
    <string name="producer_price">Product Price:</string>
    <string name="price_type">SAR</string>
    <string name="phone_number_contact">Phone Number To Contact:</string>
    <string name="email_contact">Email To Contact:</string>
    <string name="contact_way">Contact Way:</string>
    <string name="private_message">Private Message</string>
    <string name="all">All</string>
    <string name="product_details">Product Details Information:</string>
    <string name="product_details_info">write here product information</string>
    <string name="attatch_images">Attatch product images:</string>
    <string name="producet_name">Product Name:</string>
    <string name="used_products">Used Products</string>
    <string name="watches">Watches</string>
    <string name="store_desc">Write description of store</string>
    <string name="edit_ads">Edit Ads</string>
    <string name="state">State:</string>
    <string name="category">Category:</string>
    <string name="message_name">Ahmed Mohamed</string>
    <string name="received">Received</string>
    <string name="reply_with_message">Reply</string>
    <string name="message_text">Message Text</string>
    <string name="send_message">Send Message</string>
    <string name="message_to">Message to:</string>
    <string name="upload_store_img">You must upload image for store:</string>
    <string name="create_new_account">Create New Account</string>
    <string name="product_imges">Product Images:</string>
    <string name="log_out">Log out</string>
    <string name="yes">Yes</string>
    <string name="dismiss">Cancel</string>
    <string name="enter_image_please">Please enter image of store</string>
    <string name="logout_msg">Are you sure log out from saaty!!</string>
    <string name="english">english</string>
    <string name="arabic">arabic</string>
    <string name="select_city">Select City:</string>
    <string name="sending" translatable="false">Sending</string>
    <string name="show_Ads">Show Ads</string>
    <string name="skip_ads">Skip Ads</string>
    <string name="terms_conditions">Termis And Conditions</string>
    <string name="city">City:</string>
    <string name="enter_email">Please enter email</string>
    <string name="send_email_verify">send verify code to your email</string>
    <string name="verify_code_toolbar">Verification Code</string>
    <string name="replies">Reblies</string>
    <string name="done_choose_photo">The photo was chosen.</string>

</resources>
