<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="25dp"
    android:background="@drawable/white_background"
    android:padding="20dp">


    <TextView
        android:id="@+id/sort_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort_by_type"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/watch_check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/watch"
        android:textColor="@color/gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sort_by" />

    <CheckBox
        android:id="@+id/bracletes_check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bracletes"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:textColor="@color/gray"
        app:layout_constraintStart_toEndOf="@id/watch_check_box"
        app:layout_constraintTop_toBottomOf="@id/sort_by"/>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/status_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bracletes_check_box"
        android:layout_marginTop="15dp"
        android:visibility="gone">


    <TextView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/filter_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/filter_by_status"
        android:textColor="@color/black"
        android:textSize="20sp"
       />



    <CheckBox
        android:id="@+id/new_product_check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/new_products"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/filter_by" />

    <CheckBox
        android:id="@+id/old_product_product_check_box"
        android:layout_width="wrap_content"
        android:textColor="@color/gray"
        android:layout_height="wrap_content"
        android:text="@string/old_products"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toEndOf="@id/new_product_check_box"
        app:layout_constraintTop_toBottomOf="@id/filter_by"/>

    </androidx.constraintlayout.widget.ConstraintLayout>



    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_visitor_btn_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/status_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textAllCaps="false"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:text="@string/confirm"
        android:background="@color/blue"/>

</androidx.constraintlayout.widget.ConstraintLayout>