<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sideMenuScreen.myAds.EditAdsActivity"
    android:background="@color/white">

    <include
        android:id="@+id/action_bar_root"
        layout="@layout/toolbar_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    app:layout_constraintTop_toBottomOf="@id/action_bar_root"
    app:layout_constraintBottom_toBottomOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="30dp"
        android:paddingEnd="30dp">

        <TextView
            android:id="@+id/type_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/radio_group1"
            app:layout_constraintBottom_toBottomOf="@id/radio_group1"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:text="@string/type" />

        <RadioGroup
            android:id="@+id/radio_group1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/type_txt"
            android:layout_marginStart="20dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            >


            <RadioButton
                android:id="@+id/watch_radio_btn_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/watch"
                android:textColor="@color/gray"
                />


            <RadioButton
                android:id="@+id/bracletes_radio_btn_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bracletes"
                android:layout_weight="1"
                android:layout_marginStart="30dp"
                android:textColor="@color/gray"
                />


        </RadioGroup>


        <TextView
            android:id="@+id/status_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/radio_group2"
            app:layout_constraintBottom_toBottomOf="@id/radio_group2"
            android:textColor="@color/black"
            android:text="@string/status"/>

        <RadioGroup
            android:id="@+id/radio_group2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/radio_group1"
            app:layout_constraintStart_toStartOf="@id/radio_group1"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            >

            <RadioButton
                android:id="@+id/new_radio_btn_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/new_products"
                android:textColor="@color/gray"
                />


            <RadioButton
                android:id="@+id/old_radio_btn_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/used_products"
                android:layout_weight="1"
                android:textColor="@color/gray"
                />


        </RadioGroup>

        <View
            android:id="@+id/view1"
            android:layout_width="0dp"
            android:layout_height=".8dp"
            android:background="@color/gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radio_group2"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"/>

        <TextView
            android:id="@+id/product_name_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view1"
            android:layout_marginTop="7dp"
            android:textColor="@color/black"
            android:text="@string/producet_name"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/product_name_input_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="7dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/product_name_txt"
            android:drawableStart="@drawable/product_name"
            android:textAlignment="viewStart"
            android:hint="@string/watch"
            android:drawablePadding="15dp"/>

        <TextView
            android:id="@+id/product_price_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/product_name_input_id"
            android:layout_marginTop="7dp"
            android:textColor="@color/black"
            android:text="@string/producer_price"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/product_price_input_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="7dp"
            app:layout_constraintEnd_toStartOf="@id/price_type_txt"
            app:layout_constraintTop_toBottomOf="@id/product_price_txt"
            android:drawableStart="@drawable/pricec"
            android:textAlignment="viewStart"
            android:inputType="number"
            android:hint="@string/product_price"
            android:drawablePadding="15dp"/>


        <TextView
            android:id="@+id/price_type_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/product_price_input_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/product_price_input_id"
            app:layout_constraintBottom_toBottomOf="@id/product_price_input_id"
            android:textColor="@color/green"
            android:text="@string/price_type"/>


        <TextView
            android:id="@+id/phone_number_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/product_price_input_id"
            android:layout_marginTop="7dp"
            android:textColor="@color/black"
            android:text="@string/phone_number_contact"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_number_input_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="7dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phone_number_txt"
            android:drawableStart="@drawable/contact_phone"
            android:textAlignment="viewStart"
            android:hint="@string/producer_phone"
            android:inputType="number"
            android:drawablePadding="15dp"/>


        <TextView
            android:id="@+id/email_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phone_number_input_id"
            android:layout_marginTop="7dp"
            android:textColor="@color/black"
            android:text="@string/email_contact"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_input_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="7dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_txt"
            android:drawableStart="@drawable/contact_phone"
            android:hint="@string/email_value"
            android:textAlignment="viewStart"
            android:inputType="textEmailAddress"
            android:drawablePadding="15dp"/>


        <View
            android:id="@+id/view2"
            android:layout_width="0dp"
            android:layout_height=".9dp"
            android:background="@color/gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_input_id"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"/>

        <TextView
            android:id="@+id/contact_way_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view2"
            android:layout_marginTop="7dp"
            android:textColor="@color/black"
            android:text="@string/contact_way"/>


        <RadioGroup
            android:id="@+id/radio_group3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/contact_way_txt"
            app:layout_constraintStart_toEndOf="@id/status_txt"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            >

            <RadioButton
                android:id="@+id/phone_radio_btn_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number_input"
                android:textColor="@color/gray"
                />


            <RadioButton
                android:id="@+id/email_radio_btn_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_input"
                android:textColor="@color/gray"
                />



            <RadioButton
                android:id="@+id/message_radio_btn_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/private_message"
                android:textColor="@color/gray"
                />

            <RadioButton
                android:id="@+id/all_radio_btn_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all"
                android:textColor="@color/gray"
                />

        </RadioGroup>


        <View
            android:id="@+id/view3"
            android:layout_width="0dp"
            android:layout_height=".8dp"
            android:background="@color/gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radio_group3"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"/>


        <TextView
            android:id="@+id/product_details_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view3"
            android:layout_marginTop="7dp"
            android:textColor="@color/black"
            android:text="@string/product_details"/>


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/product_details_input_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/product_details_txt"
            android:drawableStart="@drawable/message_body"
            android:textAlignment="viewStart"
            android:hint="@string/product_details_info"
            android:drawablePadding="15dp"/>



        <View
            android:id="@+id/view4"
            android:layout_width="0dp"
            android:layout_height=".8dp"
            android:background="@color/gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/product_details_input_id"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"/>

        <TextView
            android:id="@+id/attatch_images_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view4"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:text="@string/attatch_images"/>

        <ImageView
            android:id="@+id/upload_images_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/upload_product_photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/attatch_images_txt"
            app:layout_constraintBottom_toBottomOf="@id/attatch_images_txt"
            android:layout_marginTop="7dp"/>



        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/upload_images_img"
            android:layout_marginTop="10dp"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_ads_btn_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recycler_view"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="20dp"
            android:textAllCaps="false"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:text="@string/save"
            android:background="@color/blue"/>


        <ProgressBar
            android:id="@+id/progress_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>