<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">


    <TextView
        android:id="@+id/delete_ads_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/delete_ads"
        android:textColor="@color/gold"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="16sp"
        />

    <TextView
        android:id="@+id/delete_ads_txt_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_ads_msg"
        android:textColor="@color/gray"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/delete_ads_txt"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/delete_btn_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/cancel_btn_id"
        app:layout_constraintTop_toBottomOf="@id/delete_ads_txt_id"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textAllCaps="false"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        android:text="@string/delete"
        android:background="@color/blue"/>



    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel_btn_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
       app:layout_constraintStart_toEndOf="@id/delete_btn_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="5dp"
        android:textAllCaps="false"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:text="@string/cancel"
        android:background="@color/blue"/>


</androidx.constraintlayout.widget.ConstraintLayout>